# wave-toolbox

./: .readthedocs.yaml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  MANIFEST.in  README.rst  pyproject.toml  requirements.txt  requirements_dev.txt  requirements_dev_environment.yml  setup.cfg  setup.py
.github/: ISSUE_TEMPLATE.md
.github/workflows/: workflow_build.yml  workflow_formatting.yml  workflow_formatting_and_testing.yml  workflow_testing.yml
deltares-wave-toolbox/: __init__.py
deltares_wave_toolbox/: Style.mplstyle  __init__.py  core_engine.py  core_spectral.py  series.py  spectrum.py
deltares_wave_toolbox/cores/: __init__.py  core_dispersion.py  core_engine.py  core_spectral.py  core_time.py  core_wave_decomposition.py  core_wavefunctions.py
docs/: conf.py  index.rst  installation.rst  make.bat  requirements_docs.txt  usage.rst
docs/source/: authors.rst  conf.py  conf.py.bak  index.rst  installation.rst  introduction.rst  modules.rst  purpose.rst  usage.rst  wave_analysis.ipynb
examples/: example_spectrum.py  test_spec.py  try_spec.py  wave_analysis.ipynb
tests/: __init__.py  conftest.py  core_decomposition_test.py  core_dispersion_test.py  core_spectral_test.py  core_time_test.py  core_wavefunctions_test.py  series_test.py  spectrum_test.py  test_deltares-wave-toolbox.py  test_deltares_wave_toolbox.py
