[project]
name = "deltares_wave_toolbox"
version = "1.1.1rc1"
description = "A Python toolbox for wave analysis"
authors = [
    {name = "Jan Kramer", email = "jan.kramer@deltares.nl"},
    {name = "Menno de Ridder", email = "menno.deridder@deltares.nl"},
    {name = "Ivo van der Werf", email = "ivo.vanderwerf@deltares.nl"},
    {name = "Joost den Bieman", email = "joost.denbieman@deltares.nl"},
]
license = {text = "GPL-3.0-or-later"}
readme = "README.rst"
requires-python = ">=3.10"
dependencies = [
    "numpy (>=2.2.3,<3.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)",
    "scipy (>=1.14.0)"
]
dynamic = [ "classifiers" ]

[project.urls]
repository = "https://github.com/Deltares-research/wave-toolbox"
documentation = "https://deltares-wave-toolbox.readthedocs.io"

[tool.poetry]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.2"
black = ">=24.8.0"
sphinx = "^8.1.3"
sphinx-rtd-theme = "^3.0.2"
nbsphinx = "^0.9.6"
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
